--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "13.0.5",
     "next-auth": "^4.18.4",
     "next-connect": "^0.13.0",
+    "next-csrf": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-material-ui-carousel": "^3.4.2",
